# modern_cpp_beginner

./: .gitignore  function_PassByRef.cpp  functions.cpp  hello.cpp  increment_demo.cpp  modern-hello-world.cpp  test.cpp  variable_address.cpp  vector_trav.cpp
cmake_double_lib/: CMakeLists.txt
cmake_double_lib/src/: CMakeLists.txt  blah.h  hello.h  main.cpp
cmake_example2/: CMakeLists.txt
cmake_example2/src/: main.cpp
cmake_project_example/: CMakeLists.txt
cmake_project_example/src/: CMakeLists.txt  blah.cpp  hello.cpp
cmake_simple/: CMakeLists.txt
cmake_simple/src/: tools.cpp  tools.h
